--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,11 @@
-version: "3"
+version: '3'
+
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper:latest
-    container_name: zookeeper
-    expose:
-      - 2181
-  kafka:
-    image: wurstmeister/kafka:latest
-    container_name: kafka
-    depends_on:
-      - zookeeper
+  redpanda:
+    image: vectorized/redpanda:v21.11.12
+    command: redpanda start --overprovisioned --smp 1 --memory 1G --reserve-memory 0M --node-id 0 --check=false
     ports:
-      - 9092:9092
-    environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "test-topic:1:1"
+      - "9092:9092"
+      - "9644:9644"
+    # networks:
+    #   - demo
